[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/CitizenController.gd" type="Script" id=2]

[node name="Citizen" groups=[
"Citizen",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="RayCasts" type="Spatial" parent="." index="2"]

[node name="RayCast1" type="RayCast" parent="RayCasts" index="0"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast2" type="RayCast" parent="RayCasts" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast3" type="RayCast" parent="RayCasts" index="2"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast4" type="RayCast" parent="RayCasts" index="3"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="VisibilityEnabler" type="VisibilityNotifier" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
aabb = AABB( -10, -1, -10, 20, 2, 20 )
